manifests/svc/ingress-routes.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`longhorn.dashboard.lan`)
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 80
      namespace: longhorn-system 
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: shared-services
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.dashboard.lan`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
